# pdf2any

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
examples/: go_wrapper.go  json_error.json  json_success.json  node_wrapper.js  prosemirror_sample.json  sample_cli_commands.sh
packaging/: artifact_naming.py  nuitka_onefile.py  nuitka_standalone.py
pdf2any/: __init__.py  __main__.py  cli.py  errors.py  ir.py  logging_config.py  registry.py
pdf2any/backends/: __init__.py  docx_backend.py  image_backend.py  ocr_easyocr.py  ocr_integration.py  ocr_llm.py  ocr_provider.py  ocr_tesseract.py
pdf2any/models/: __init__.py  metadata.py  page.py  style.py
pdf2any/normalize/: __init__.py  heading_detector.py  list_detector.py  normalizer.py  table_normalizer.py
pdf2any/parser/: __init__.py  layout_extractor.py  pdf_parser.py  table_extractor.py  text_extractor.py
pdf2any/renderers/: __init__.py  base.py  html_renderer.py  json_renderer.py  markdown_renderer.py  prosemirror_renderer.py  text_renderer.py
pdf2any/utils/: __init__.py  io_utils.py  page_range.py  platform_info.py
scripts/: build_onefile.py  build_standalone.py  generate_checksums.py  install.ps1  install.sh
tests/: __init__.py  conftest.py  test_cli.py  test_html_renderer.py  test_ir.py  test_json_text_renderers.py  test_markdown_renderer.py  test_normalizer.py  test_ocr.py  test_page_range.py  test_prosemirror_renderer.py  test_registry.py
